# Algorithm-Data-Structures

./: CMakeLists.txt  README.md
ABR/BinarySearchTree/: binarySearchTree.h  main.cpp  node.h
BinaryTree/Heap/MaxHeap/: main.cpp  maxHeap.h
BinaryTree/Heap/MinHeap/: main.cpp  minHeap.h
BinaryTree/Profondità/: main.cpp
EserciziSlide-Lezione06/esercizio01/: kesimoNumMax.cpp
EserciziSlide-Lezione06/esercizio02/: main.cpp
EserciziSlide-Lezione06/esercizio03/: main.cpp
EserciziSlide-Lezione06/esercizio04/: main.cpp
EserciziSlide-Lezione06/esercizio06/: main.cpp
EserciziSlide-Lezione06/maxSubArray/: main.cpp
EserciziSlide-Lezione07/MergeSortRecursive/: main.cpp
EserciziSlide-Lezione07/MergeSortVector/: main.cpp
EserciziSlide-Lezione08/QuickSortDoublePivot/: main.cpp
EserciziSlide-Lezione08/QuickSortVector/: main.cpp
EserciziSlide-Lezione09/Esercizio-01/: main.cpp
EserciziSlide-Lezione09/Esercizio-03/: main.cpp
EserciziSlide-Lezione09/Esercizio-03.2/: minHeap.h
EserciziSlide-Lezione09/Esercizio-04/: main.cpp  minHeap.h
EserciziSlide-Lezione09/Esercizio-05/: isHeap.h  main.cpp
EserciziSlide-Lezione09/Esercizio-06/: kHeap.h  main.cpp
EserciziSlide-Lezione10/Esercizio-01/: main.cpp
EserciziSlide-Lezione10/Esercizio-02/: main.cpp
EserciziSlide-Lezione10/Esercizio-03/: main.cpp
EserciziSlide-Lezione10/PriorityQueue/Min-priority-Queue/: main.cpp  minHeap.h  minPriorityQueue.h
EserciziSlide-Lezione12/Esercizio03/: binarySearchTree.h  main.cpp  node.h
EserciziSlide-Lezione12/Esercizio04/: abr.h  main.cpp  node.h
Grafi/BFSVisit/: grafoOrientato.h  main.cpp  nodo.h  vertice.h
Grafi/DFSVisit/: grafoOrientato.h  main.cpp  nodo.h  vertice.h
Grafi/InsiemiDisgiunti/: grafoNonOrientato.h  main.cpp  nodo.h
Grafi/OrdinamentoTopologico/: grafo.h  main.cpp  nodo.h  vertice.h
HelloWorld/: decisionMaking.cpp  helloWorld.cpp  sizeData.cpp  whileLoop.cpp
InsiemiDisgiunti/: grafoNonOrientato.h  main.cpp  nodo.h  vertice.h
Introduction-Data-Structures/classInheritance/: inheritance.cpp
Introduction-Data-Structures/iterator/: iteratorTest.cpp
Introduction-Data-Structures/linkedList/: manager.h
Introduction-Data-Structures/map/: map.cpp
Introduction-Data-Structures/opFile/: fileWrite.cpp
Introduction-Data-Structures/operatorOverload/: vectorSum.cpp
Introduction-Data-Structures/overLoading/: overLoadFunction.cpp
Introduction-Data-Structures/polymorphism/: classPolymorphism.cpp
Introduction-Data-Structures/wordCount/: counter.h
Mst/Kruskal/: grafoPesato.h  main.cpp  nodo.h  vertice.h
PreparazioneEsame/BinarySearchTree/: abr.h  nodo.h
PreparazioneEsame/BinarySearchTree/PrimaProva/: main.cpp
PreparazioneEsame/BinarySearchTree/QuartaProva/: abr.h  main.cpp  nodo.h
PreparazioneEsame/BinarySearchTree/QuintaProva/: abr.h  main.cpp  nodo.h
PreparazioneEsame/BinarySearchTree/SecondaProva/: abr2.h  main2.cpp  nodo2.h
PreparazioneEsame/BinarySearchTree/SestaProva/: abr.h  main.cpp  nodo.h
PreparazioneEsame/BinarySearchTree/SettimaProva/: abr.h  main.cpp  nodo.h
PreparazioneEsame/BinarySearchTree/TerzaProva/: abr.h  main.cpp  nodo.h
PreparazioneEsame/Grafi/Bfs1/: grafo.h  nodo.h  vertice.h
PreparazioneEsame/Grafi/bfs/Bfs1/: main.cpp
PreparazioneEsame/Grafi/bfs/Bfs2/: grafo.h  main.cpp  nodo.h  vertice.h
PreparazioneEsame/Grafi/bfs/Bfs3/: grafo.h  main.cpp  nodo.h  vertice.h
PreparazioneEsame/Grafi/bfs/Bfs4/: grafo.h  main.cpp  nodo.h  vertice.h
PreparazioneEsame/Grafi/bfs/Bfs6/: grafo.h  main.cpp  nodo.h  vertice.h
PreparazioneEsame/Grafi/bfs/Bfs7/: grafo.h  main.cpp  nodo.h  vertice.h
PreparazioneEsame/Grafi/bfs/bfs5/: fileInput.txt  grafo.h  main.cpp  nodo.h  vertice.h
PreparazioneEsame/Grafi/dfs/dfs1/: grafo.h  main.cpp  nodo.h
PreparazioneEsame/Grafi/dfs/dfs2/: grafo.h  main.cpp  vertice.h
PreparazioneEsame/Grafi/dfs/dfs3/: grafo.h  main.cpp  nodo.h  vertice.h
PreparazioneEsame/Grafi/dfs/dfs4/: grafo.h  main.cpp  nodo.h  vertice.h
PreparazioneEsame/HashTable/: IN.txt  OUT.txt  main.cpp
PreparazioneEsame/HashTable/Hash1/: IN.txt  OUT.txt  main.cpp
PreparazioneEsame/HashTable/Hash2/: fileInput.txt  fileOutput.txt  main.cpp
PreparazioneEsame/HeapSort/: heapSort.h  main.cpp
PreparazioneEsame/HeapSort/HeapSort1/: heap.h  main.cpp
PreparazioneEsame/Ordinamento/MergeSort/: fileInput.txt  fileOutput.txt  main.cpp  mergeSort.h
PreparazioneEsame/Ordinamento/QuickSort/: fileInput.txt  fileOutput.txt  main.cpp  quickSort.h
PriorityQueue/Max-Priority-Queue/: fileInput.txt  main.cpp  maxHeap.h  maxPriorityQueue.h
PriorityQueue/Min-priority-Queue/: main.cpp  minHeap.h  minPriorityQueue.h
VariousExercises/HelloWorld/: forLoop.cpp
VariousExercises/blockChain/: main.cpp  node.h
VariousExercises/giocoDel15/: checkerSolution.h
VariousExercises/indovinelloAnfore/: anfore.h  contenitore.h  gioco
VariousExercises/rispettaVersi/: Esito.txt  controllo.h
algoritmiDiOrdinamento/BubbleSort/: main.cpp
algoritmiDiOrdinamento/HybridSort/: main.cpp
algoritmiDiOrdinamento/InsertionSort/: main.cpp
algoritmiDiOrdinamento/MergeSort/: main.cpp
algoritmiDiOrdinamento/QuickSort/: main.cpp
algoritmiDiOrdinamento/QuickSort/NormalQuickSort/: main.cpp
algoritmiDiOrdinamento/QuickSort/RandomizedQuickSort/: main.cpp
algoritmiDiOrdinamento/ordinamentoLineare/BucketSort/: main.cpp
algoritmiDiOrdinamento/ordinamentoLineare/CountingSort/: countingSort.h  fileInput.txt  main.cpp
algoritmiDiOrdinamento/ordinamentoLineare/RadixSort/: main.cpp  radixSort.h
blockChain/: block.h  list.h  transaction.h
giocoDel15/: main.cpp
indovinelloAnfore/: gioco.cpp  indovinello.h
linkedList/: employee.h  list.h  main.cpp  manager.h  node.h
opFile/: file1.txt  fileWrite.cpp
programmazioneDinamica/DistanzaDiEditing/: main.cpp
programmazioneDinamica/Knapsack/: main.cpp
programmazioneGreedy/Esercizio01/: main.cpp
programmazioneGreedy/Esercizio02/: main.cpp  minPriorityQueue.h  minheap.h
rispettaVersi/: Problema.txt  Soluzione.txt  main.cpp
thread/: thread.cpp
wordCount/: main.cpp  text.txt
(+49 files in other folders)
